// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 1`] = `
<DocumentFragment>
  test@sourcegraph.com (
  <a
    class=""
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    @test
  </a>
  )
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 2`] = `
<DocumentFragment>
  test@sourcegraph.com (
  <a
    class=""
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    @test
  </a>
  )
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 3`] = `
<DocumentFragment>
  test@sourcegraph.com (
  <a
    class=""
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    @test
  </a>
  )
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 4`] = `
<DocumentFragment>
  test@sourcegraph.com (
  <a
    class=""
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    @test
  </a>
  )
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 5`] = `
<DocumentFragment>
  <span>
    test@sourcegraph.com
  </span>
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 6`] = `
<DocumentFragment>
  test@sourcegraph.com (
  <a
    class=""
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    @test
  </a>
  )
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 7`] = `
<DocumentFragment>
  <span>
    test@sourcegraph.com
  </span>
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 8`] = `
<DocumentFragment>
  test@sourcegraph.com (
  <a
    class=""
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    @test
  </a>
  )
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 9`] = `
<DocumentFragment>
  <span>
    test@sourcegraph.com
  </span>
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name is set 10`] = `
<DocumentFragment>
  test@sourcegraph.com (@test)
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 1`] = `
<DocumentFragment>
  Not connected
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 2`] = `
<DocumentFragment>
  Not connected
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 3`] = `
<DocumentFragment>
  Not connected
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 4`] = `
<DocumentFragment>
  Not connected
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 5`] = `
<DocumentFragment>
  <span>
    Not connected
  </span>
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 6`] = `
<DocumentFragment>
  Not connected
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 7`] = `
<DocumentFragment>
  <span>
    Not connected
  </span>
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 8`] = `
<DocumentFragment>
  Not connected
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 9`] = `
<DocumentFragment>
  <span>
    Not connected
  </span>
</DocumentFragment>
`;

exports[`ExternalAccountConnectionDetails > renders correctly when display name isn't set 10`] = `
<DocumentFragment>
  Not connected
</DocumentFragment>
`;
